# anasto

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  tests.yml
bus/: Cargo.toml
bus/src/: lib.rs
config/: Cargo.toml
config/src/: bootstrap.rs  lib.rs  tables.rs
config/test_configs/: basic.toml  create_schemas.toml  enforced_schemas.toml  existing_schemas.toml  multi_record.toml  one_record.toml
config/test_schemas/existing_schemas/: schema_one.json  schema_two.json
config/test_schemas/multi_record/: table_one.json  table_two.json
config/tests/: end_to_end.rs  tables.rs
domains/: Cargo.toml
domains/src/: events.rs  lib.rs  record.rs  schema.rs  sub.rs
domains/tests/: record.rs  schema.rs
entrypoints/: Cargo.toml
entrypoints/src/: errors.rs  health.rs  lib.rs  models.rs  record.rs  schema.rs  subscribe.rs
entrypoints/test_schemas/basic/: page_view.json
entrypoints/tests/: errors.rs  health.rs  record.rs  schema.rs  sub.rs
handlers/: Cargo.toml
handlers/src/: lib.rs  record.rs  sub.rs
handlers/tests/: record.rs
main/: Cargo.toml
main/src/: main.rs
repos/: Cargo.toml
repos/src/: lib.rs  record.rs  schema.rs
repos/tests/: record.rs
src/: lib.rs  main.rs
src/startup/: config.rs  logger.rs  mod.rs  poll.rs
src/tables/: dest_files.rs  dest_open_table.rs  dest_tables.rs  mod.rs  source_api.rs  source_files.rs  source_open_table.rs  source_tables.rs  test_utils.rs  utils.rs
sub/: Cargo.toml
sub/src/: lib.rs  localfile.rs  sub_trait.rs
sub/test_tables/test_table_seven/: 2a40c205-1ab2-4e71-aa67-a7a6277e2639.jsonl
sub/tests/: localfile.rs
tests/config/: api_test.toml  pagination_config.toml  pokemon_config.toml  test_config.toml
tests/data/avro_table/: test.avro
tests/data/csv_as_delta/: part-00000-36b6791c-4f86-43c1-8bf8-b81c5910c2be-c000.zstd.parquet  part-00000-675cbe6a-18b1-464f-b2dc-474593514161-c000.zstd.parquet
tests/data/csv_table/: test_1.csv  test_2.csv
tests/data/csv_table_two/: test.csv
tests/data/delta_as_csv_table/7c6e87d1-36f0-40ef-a2ff-dacba1d7cd48/: part-0.csv
tests/data/delta_as_csv_table/e52d81ad-8121-429b-94db-2b8347839238/: part-0.csv
tests/data/delta_as_csv_table/ebfdd5d1-daa2-4f5e-a68e-5feab49fcf54/: part-0.csv
tests/data/json_table/: test_1.json
tests/data/json_table/505e81db-8fc2-411f-b4ec-74ba2e8e28d9/: part-1.json
tests/data/parquet_table/: part-0.parquet  part-1.parquet
tests/data/pokemon_table/: 16935549-309f-4298-9daf-d1c804ab8e6f.json
tests/data/users_table/: a9778592-0d24-4da6-a641-ee97b6aa26bf.csv
tests/data/weather_table/: f623a10a-a024-43b6-a3a8-38dcb4021012.json
