[package]
name = "anasto"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
datafusion = "28.0.0"
dashmap = "5.5.0"
random_name_generator = "0.3.5"
convert_case = "0.6.0"
time = "0.3.25"
deltalake = { version = "0.14.0", features = ["datafusion"] }
uuid = { version = "1.2.2", features = ["v4"] }
arrow-schema = "43.0.0"
parquet = "43.0.0"

[dev-dependencies]
arrow-array = "43.0.0"