[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
# tracing = "0.1"
# tracing-subscriber = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
bus = { path = "../bus" }
entrypoints = { path = "../entrypoints" }
tokio = { version = "1", features = ["rt"] }
warp = "0.3"
repos = { path = "../repos" }
domains = { path = "../domains" }
sub = { path = "../sub" }
time = { version = "0.3.11", features = ["serde", "serde-well-known"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
random_name_generator = "0.3.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
http = "0.2"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tungstenite = "0.19.0"
url = "2.3.1"