[package]
name = "sub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
domains = { path = "../domains" }
repos = { path = "../repos" }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
log = "0.4"
serde_json = "1.0"
csv = "1.2.1"
apache-avro = { version = "0.14", features = ["snappy"] }
parquet = { version = "40.0", features = ["json", "snap", "arrow"] }
arrow-array = "40.0"